1. Implementación de Registro de Mensajesn en la sesion