@@ -3,9 +3,10 @@ package com.ryfsystems.ryftaxi.controller;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.SerializationFeature;
 import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
+import com.ryfsystems.ryftaxi.dto.ChatMessage;
 import com.ryfsystems.ryftaxi.enums.MessageType;
-import com.ryfsystems.ryftaxi.model.ChatMessage;
 import com.ryfsystems.ryftaxi.model.User;
+import com.ryfsystems.ryftaxi.service.MessageService;
 import com.ryfsystems.ryftaxi.service.UserService;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -27,15 +28,18 @@ import java.util.concurrent.ConcurrentHashMap;
 import java.util.stream.Collectors;
 
 @Slf4j
-public class ChatWebSocketHandler extends TextWebSocketHandler{
+public class ChatWebSocketHandler extends TextWebSocketHandler {
 
     private final ObjectMapper objectMapper;
     private final Map<String, WebSocketSession> sessions = new ConcurrentHashMap<>();
     private final Map<String, User> users = new ConcurrentHashMap<>();
     private final Map<String, Map<String, User>> roomUsers = new ConcurrentHashMap<>();
-    
+
     private final Sinks.Many<ChatMessage> messageSink = Sinks.many().multicast().onBackpressureBuffer();
     private final Flux<ChatMessage> messageFlux = messageSink.asFlux();
+
+    @Autowired
+    private MessageService messageService;
 
     @Autowired
     private UserService userService;
@@ -46,7 +50,7 @@ public class ChatWebSocketHandler extends TextWebSocketHandler{
         this.objectMapper.registerModule(new JavaTimeModule());
         this.objectMapper.configure(SerializationFeature.WRITE_DATES_AS_TIMESTAMPS, false);
         this.objectMapper.findAndRegisterModules();
-        
+
         log.debug("✅ ObjectMapper configurado con JavaTimeModule");
         log.debug("📋 Módulos registrados: " + objectMapper.getRegisteredModuleIds());
     }
@@ -56,18 +60,18 @@ public class ChatWebSocketHandler extends TextWebSocketHandler{
     public void afterConnectionEstablished(WebSocketSession session) throws Exception {
         sessions.put(session.getId(), session);
         log.debug("🔗 Conexión establecida: " + session.getId());
-        
+
         // Suscribirse al flux de mensajes para este usuario con manejo de errores
         messageFlux
-            .filter(message -> shouldSendToSession(session, message))
-            .subscribe(
-                message -> sendMessageToSession(session, message),
-                error -> {
-                    System.err.println("❌ Error en flux para sesión " + session.getId() + ": " + error.getMessage());
-                    cleanupClosedSession(session.getId());
-                },
-                () -> log.debug("✅ Flux completado para sesión: " + session.getId())
-            );
+                .filter(message -> shouldSendToSession(session, message))
+                .subscribe(
+                        message -> sendMessageToSession(session, message),
+                        error -> {
+                            System.err.println("❌ Error en flux para sesión " + session.getId() + ": " + error.getMessage());
+                            cleanupClosedSession(session.getId());
+                        },
+                        () -> log.debug("✅ Flux completado para sesión: " + session.getId())
+                );
     }
 
     @Override
@@ -114,19 +118,19 @@ public class ChatWebSocketHandler extends TextWebSocketHandler{
         user.setSessionId(session.getId());
         user.setCurrentRoom(message.getRoomId());
         users.put(session.getId(), user);
-        
+
         roomUsers.computeIfAbsent(message.getRoomId(), k -> new ConcurrentHashMap<>())
                 .put(session.getId(), user);
 
         ChatMessage joinMessage = new ChatMessage(
-            MessageType.JOIN,
-            user.getUsername() + " se ha unido a la sala",
-            "System",
-            message.getRoomId()
+                MessageType.JOIN,
+                user.getUsername() + " se ha unido a la sala",
+                "System",
+                message.getRoomId()
         );
 
         userService.updateRoomAndSession(user.getId(), joinMessage.getRoomId(), user.getSessionId());
-        
+
         messageSink.tryEmitNext(joinMessage);
         log.debug("👤 Usuario " + user.getUsername() + " se unió a la sala: " + message.getRoomId());
     }
@@ -136,6 +140,7 @@ public class ChatWebSocketHandler extends TextWebSocketHandler{
         if (user != null) {
             message.setSender(user.getUsername());
             messageSink.tryEmitNext(message);
+            messageService.saveMessage(message);
             log.debug("Mensaje enviado: " + message);
         }
     }
@@ -148,15 +153,15 @@ public class ChatWebSocketHandler extends TextWebSocketHandler{
             if (room != null) {
                 room.remove(session.getId());
             }
-            
+
             // Notificar salida
             ChatMessage leaveMessage = new ChatMessage(
-                MessageType.LEAVE,
-                user.getUsername() + " ha dejado la sala",
-                "System",
-                user.getCurrentRoom()
+                    MessageType.LEAVE,
+                    user.getUsername() + " ha dejado la sala",
+                    "System",
+                    user.getCurrentRoom()
             );
-            
+
             messageSink.tryEmitNext(leaveMessage);
             users.remove(session.getId());
             userService.updateRoomAndSession(user.getId(), null, null);
@@ -175,21 +180,21 @@ public class ChatWebSocketHandler extends TextWebSocketHandler{
     @Override
     public void afterConnectionClosed(WebSocketSession session, CloseStatus status) throws Exception {
         log.debug("🔌 Conexión cerrada: " + session.getId() + " - Razón: " + status.getCode() + " - " + status.getReason());
-        
+
         User user = users.get(session.getId());
         if (user != null) {
             // Crear mensaje de salida
             ChatMessage leaveMessage = new ChatMessage(
-                MessageType.LEAVE,
-                user.getUsername() + " ha dejado la sala",
-                "System",
-                user.getCurrentRoom()
+                    MessageType.LEAVE,
+                    user.getUsername() + " ha dejado la sala",
+                    "System",
+                    user.getCurrentRoom()
             );
             // Enviar mensaje de salida a otros usuarios (excluyendo la sesión cerrada)
             broadcastMessageToRoom(leaveMessage, user.getCurrentRoom(), session.getId());
         }
-    // Limpiar la sesión
-    cleanupClosedSession(session.getId());
+        // Limpiar la sesión
+        cleanupClosedSession(session.getId());
     }
 
     private void broadcastMessageToRoom(ChatMessage message, String roomId, String excludeSessionId) {
@@ -200,7 +205,7 @@ public class ChatWebSocketHandler extends TextWebSocketHandler{
                 if (sessionId.equals(excludeSessionId)) {
                     continue;
                 }
-                
+
                 WebSocketSession targetSession = sessions.get(sessionId);
                 if (targetSession != null && targetSession.isOpen()) {
                     sendMessageToSession(targetSession, message);
@@ -214,18 +219,18 @@ public class ChatWebSocketHandler extends TextWebSocketHandler{
 
     public void cleanupAllClosedSessions() {
         List<String> closedSessions = new ArrayList<>();
-    
+
         for (String sessionId : sessions.keySet()) {
             WebSocketSession session = sessions.get(sessionId);
             if (session == null || !session.isOpen()) {
                 closedSessions.add(sessionId);
             }
         }
-        
+
         for (String sessionId : closedSessions) {
             cleanupClosedSession(sessionId);
         }
-        
+
         if (!closedSessions.isEmpty()) {
             log.debug("🧹 Limpiadas " + closedSessions.size() + " sesiones cerradas");
         }
@@ -233,13 +238,13 @@ public class ChatWebSocketHandler extends TextWebSocketHandler{
 
     private boolean shouldSendToSession(WebSocketSession session, ChatMessage message) {
         if (session == null || !session.isOpen()) {
-        return false;
-    }
-    
-    User user = users.get(session.getId());
-    return user != null && 
-           user.getCurrentRoom() != null && 
-           user.getCurrentRoom().equals(message.getRoomId());
+            return false;
+        }
+
+        User user = users.get(session.getId());
+        return user != null &&
+                user.getCurrentRoom() != null &&
+                user.getCurrentRoom().equals(message.getRoomId());
     }
 
     private void sendMessageToSession(WebSocketSession socketSession, ChatMessage message) {
@@ -247,24 +252,24 @@ public class ChatWebSocketHandler extends TextWebSocketHandler{
             if (socketSession != null && socketSession.isOpen()) {
                 String jsonMessage = objectMapper.writeValueAsString(message);
                 log.debug("📤 Enviando mensaje JSON a " + socketSession.getId() + ": " + jsonMessage);
-                
+
                 synchronized (socketSession) {
                     socketSession.sendMessage(new TextMessage(jsonMessage));
                 }
                 log.debug("✅ Mensaje enviado exitosamente a sesión: " + socketSession.getId());
             } else {
-                log.debug("⚠️ No se puede enviar mensaje - Sesión cerrada: " + 
-                                (socketSession != null ? socketSession.getId() : "null"));
-                
+                log.debug("⚠️ No se puede enviar mensaje - Sesión cerrada: " +
+                        (socketSession != null ? socketSession.getId() : "null"));
+
                 // Limpiar sesión cerrada
                 if (socketSession != null) {
                     cleanupClosedSession(socketSession.getId());
                 }
             }
         } catch (IOException e) {
-        System.err.println("❌ Error enviando mensaje a sesión " + 
-                          (socketSession != null ? socketSession.getId() : "null") + ": " + e.getMessage());
-        
+            System.err.println("❌ Error enviando mensaje a sesión " +
+                    (socketSession != null ? socketSession.getId() : "null") + ": " + e.getMessage());
+
             // Limpiar sesión con error
             if (socketSession != null) {
                 cleanupClosedSession(socketSession.getId());
@@ -273,41 +278,41 @@ public class ChatWebSocketHandler extends TextWebSocketHandler{
     }
 
     private void cleanupClosedSession(String sessionId) {
-    log.debug("🧹 Limpiando sesión cerrada: " + sessionId);
-    
-    // Remover usuario si existe
-    User user = users.remove(sessionId);
-    if (user != null) {
-        log.debug("👤 Usuario removido: " + user.getUsername());
-        
-        // Remover de la sala
-        if (user.getCurrentRoom() != null) {
-            Map<String, User> room = roomUsers.get(user.getCurrentRoom());
-            if (room != null) {
-                room.remove(sessionId);
-                log.debug("🚪 Usuario removido de la sala: " + user.getCurrentRoom());
-                
-                // Si la sala queda vacía, limpiarla
-                if (room.isEmpty()) {
-                    roomUsers.remove(user.getCurrentRoom());
-                    log.debug("🗑️ Sala vacía removida: " + user.getCurrentRoom());
+        log.debug("🧹 Limpiando sesión cerrada: " + sessionId);
+
+        // Remover usuario si existe
+        User user = users.remove(sessionId);
+        if (user != null) {
+            log.debug("👤 Usuario removido: " + user.getUsername());
+
+            // Remover de la sala
+            if (user.getCurrentRoom() != null) {
+                Map<String, User> room = roomUsers.get(user.getCurrentRoom());
+                if (room != null) {
+                    room.remove(sessionId);
+                    log.debug("🚪 Usuario removido de la sala: " + user.getCurrentRoom());
+
+                    // Si la sala queda vacía, limpiarla
+                    if (room.isEmpty()) {
+                        roomUsers.remove(user.getCurrentRoom());
+                        log.debug("🗑️ Sala vacía removida: " + user.getCurrentRoom());
+                    }
                 }
             }
         }
+
+        // Remover sesión
+        sessions.remove(sessionId);
+        log.debug("✅ Sesión limpiada: " + sessionId);
     }
-    
-    // Remover sesión
-    sessions.remove(sessionId);
-    log.debug("✅ Sesión limpiada: " + sessionId);
-}
 
     private void sendError(WebSocketSession session, String error) {
         try {
             ChatMessage errorMessage = new ChatMessage(
-                MessageType.CHAT,
-                error,
-                "System",
-                "global"
+                    MessageType.CHAT,
+                    error,
+                    "System",
+                    "global"
             );
             String jsonError = objectMapper.writeValueAsString(errorMessage);
             session.sendMessage(new TextMessage(jsonError));
@@ -316,8 +321,12 @@ public class ChatWebSocketHandler extends TextWebSocketHandler{
         }
     }
 
-    private String generateUserId() {
-        return "user_" + System.currentTimeMillis() + "_" + (int)(Math.random() * 1000);
+    public List<ChatMessage> getRoomMessageHistory(String roomId) {
+        return messageService.getRoomMessageHistory(roomId);
+    }
+
+    public List<ChatMessage> getRecentRoomMessages(String roomId, int limit) {
+        return messageService.getRecentRoomMessages(roomId, limit);
     }
 
     /**
@@ -361,7 +370,7 @@ public class ChatWebSocketHandler extends TextWebSocketHandler{
                 .map(User::getUsername)
                 .collect(Collectors.toList());
         stats.put("connectedUsers", userList);
-        
+
         return stats;
     }
 
@@ -373,22 +382,32 @@ public class ChatWebSocketHandler extends TextWebSocketHandler{
         if (room == null) {
             return Map.of("error", "Sala no encontrada");
         }
-
-        List<Map<Object,Object>> usersInRoom = room.values()
+        List<Map<Object, Object>> usersInRoom = room.values()
                 .stream()
                 .map(user -> {
-                    Map<Object,Object> userInfo = new HashMap<>();
+                    Map<Object, Object> userInfo = new HashMap<>();
                     userInfo.put("username", user.getUsername());
                     userInfo.put("sessionId", user.getSessionId());
                     userInfo.put("userId", user.getId());
                     return userInfo;
                 })
-                .collect(Collectors.toList());
+                .toList();
         return Map.of(
-            "roomId", roomId,
-            "userCount", room.size(),
-            "users", usersInRoom,
-            "timestamp", LocalDateTime.now().format(DateTimeFormatter.ISO_LOCAL_DATE_TIME)
+                "roomId", roomId,
+                "userCount", room.size(),
+                "users", usersInRoom,
+                "timestamp", LocalDateTime.now().format(DateTimeFormatter.ISO_LOCAL_DATE_TIME),
+                "messageCount", getMessageStats().get(roomId)
         );
+    }
+
+    public Map<String, Object> getMessageStats() {
+        Map<String, Object> stats = new HashMap<>();
+
+        for (String roomId : roomUsers.keySet()) {
+            long messageCount = messageService.getMessageCountByRoom(roomId);
+            stats.put(roomId, messageCount);
+        }
+        return stats;
     }
 }
